Include more fields to serve endpoints and adding with parent validation status to utxos to support faster queries